# Toptw

./: .gitignore  CMakeLists.txt  README.md
data/toptw/: bks.csv  file.txt
result/toptw/: result_VNS.csv
result/toptw/VNS/: sol_pr01.txt_1.txt  sol_pr01.txt_2.txt  sol_pr01.txt_3.txt  sol_pr01.txt_4.txt  sol_pr02.txt_1.txt  sol_pr02.txt_2.txt  sol_pr02.txt_3.txt  sol_pr02.txt_4.txt  sol_pr03.txt_1.txt  sol_pr03.txt_2.txt  sol_pr03.txt_3.txt  sol_pr03.txt_4.txt  sol_pr04.txt_1.txt  sol_pr04.txt_2.txt  sol_pr04.txt_3.txt  sol_pr04.txt_4.txt  sol_pr05.txt_1.txt  sol_pr05.txt_2.txt  sol_pr05.txt_3.txt  sol_pr05.txt_4.txt  sol_pr06.txt_1.txt  sol_pr06.txt_2.txt  sol_pr06.txt_3.txt  sol_pr06.txt_4.txt  sol_pr07.txt_1.txt  sol_pr07.txt_2.txt  sol_pr07.txt_3.txt  sol_pr07.txt_4.txt  sol_pr08.txt_1.txt  sol_pr08.txt_2.txt  sol_pr08.txt_3.txt  sol_pr08.txt_4.txt  sol_pr09.txt_1.txt  sol_pr09.txt_2.txt  sol_pr09.txt_3.txt  sol_pr09.txt_4.txt  sol_pr10.txt_1.txt  sol_pr10.txt_2.txt  sol_pr10.txt_3.txt  sol_pr10.txt_4.txt  (+40 more)
src/: mainToptw.cpp
src/toptw/: AlgoParameter.cpp  AlgoParameter.hpp  CMakeLists.txt  GraphVrptw.h  OperatorRoute.cpp  OperatorRoute.hpp  ProblemToptw.hpp  RandomMove.cpp  RandomMove.hpp  ResultToptw.h  SolutionToptw.cpp  SolutionToptw.h  VNS.cpp  VNS.hpp  huq.h  json.hpp
